# spbstu

./: .gitignore  LICENSE  Makefile  README.md  common.tex  title.tex
cs/mincoscot/: inf.tex  mincoscot.tex  tech.tex
cs/mincoscot/_haskell/: mincoscot.cabal
cs/mincoscot/_haskell/src/: Main.hs
cs/mincoscot/_haskell/test/: Spec.hs
cs/mincoscot/haskell/: mincoscot.cabal
cs/mincoscot/haskell/src/: Main.hs
cs/mincoscot/src/: mincoscot.clj
cs/mincoscot/test/: mincoscot_test.clj
cs/oracle/: build.sbt
cs/oracle/.bsp/: sbt.json
cs/oracle/src/main/scala/: CampusMap.scala  Game.scala  Main2.scala  Soccer.scala
cs/sort/: build.sbt  sort.tex
cs/sort/src/main/scala/sort/: Bubble.scala  Impl.scala  Main.scala  Selection.scala
ing/block/: block.tex
ing/gost/: gost.bbl  gost.bcf  gost.blg  gost.run.xml  gost.tex
ing/graph/: graph.tex
rus/1/: rol.tex
tsm/materials/: materials.tex
