name:                mincoscot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/droptheplot/spbstu
license:             BSD3
license-file:        LICENSE
author:              Sergei Novikov
copyright:           2018 Sergei Novikov
build-type:          Simple
cabal-version:       >=1.10

executable mincoscoths
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
               ,       text
